# c8lang

./: CMakeLists.txt  README.md
examples/: test.c8c
src/: c8c.c  c8c.h  lexer.h  lexer.re  main.c  token.c  token.h
test/: cheat.h  cheats.h  tests.c  token.c
